kubernetes/skywalker/application/keycloak/keycloak.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: keycloak

spec:
  gateways:
    - cluster/feldman-tech
  hosts:
    - auth.feldman.tech
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak
            port:
              number: 80
